B-F Sandbox Full-Backup/src/objects/Vistex_Agreement_Types__c.object
<CustomObject>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Catalogue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pouring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incentives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ranging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Xmas Catalogue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocktail Listings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uniforms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signage</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <picklist>
            <picklistValues>
                <fullName>On Retailers Invoice - Rate per Case On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Retailers Invoice - Rate per Case Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate Customer - Lump Sum On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate Customer - Lump Sum Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate Group - Lump Sum On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate Group - Lump Sum Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate Third Party - Lump Sum On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate Third Party - Lump Sum Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate Customer - Rate per Case On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate Customer - Rate per Case Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate Group - Rate Per Case On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate Group - Rate Per Case Off</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>ON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OFF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <label>Condition</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <picklist>
            <picklistValues>
                <fullName>Rate Per Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate per Case Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lump Sum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lump Sum Off</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Vistex Agreement Types</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Condition__c</columns>
        <columns>Channel__c</columns>
        <columns>Method__c</columns>
        <columns>Application__c</columns>
        <columns>Activity__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Vistex Agreement Types Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vistex Agreement Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>